fixing blog page overflow

--- a/src/Components/blog.scss
+++ b/src/Components/blog.scss
@@ -61,6 +61,8 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        width: 98vw;
+        overflow-x: hidden;
         div{
             width: 83vw;
             display: flex;
