--- a/src/Components/shop.scss
+++ b/src/Components/shop.scss
@@ -6,7 +6,6 @@
   font-family: "spartan", sans-serif;
 }
 .shop {
-  width: 100vw;
   .pip {
     margin: 20px 0;
     opacity: 0;
